# qtservice

./: CMakeLists.txt  common.cmake
demo/: Ink_service.cpp  Ink_service.h
